# CoreasSpellcaster

./: .gitignore  README.md  generate_and_submit_subfile.py  input_file.txt  pyproject.toml  submit.sh
legacy_files/: MakeCorsikaSim.py  SubFile.sub  corsikaSim.sh
utils/: FileWriter.py  RadioFilesGenerator.py  SimulationMaker.py
