[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coreas_spellcaster"
version = "0.1.0"
authors = [
  { name="Keito Watanabe"},
  { name="Jelena Köhler"},
   { name="Federico Bontempo"}
]
description = "Unleash the magic of simultaneous shower simulations with this Coreas generator."
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
  "numpy",
]

[project.urls]
Homepage = "https://github.com/jelenakhlr/CoreasSpellcaster"
Issues = "https://github.com/jelenakhlr/CoreasSpellcaster/issues"